remove jwt provider
